Fix text wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ button {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	word-break: break-all;
 }
 
 @keyframes replyHighlight {
@@ -172,6 +173,7 @@ button {
 .timeline>* .time {
 	padding-right: 0.3em;
 	opacity: 50%;
+	word-break: keep-all;
 }
 
 .timeline>* a.link {
